gccida/c1/simplify_relational_operation
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_relational_operation/src/simplify-rtx.c:2540:37: error: must use 'enum' tag to refer to type 'rtx_code'
rtx  simplify_relational_operation( rtx_code code, machine_mode mode, rtx op0, rtx op1) 
                                    ^
                                    enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_relational_operation/src/simplify-rtx.c:2540:52: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_relational_operation( rtx_code code, machine_mode mode, rtx op0, rtx op1) 
                                                   ^
                                                   enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_relational_operation/src/simplify-rtx.c:2544:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v7; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_relational_operation/src/simplify-rtx.c:2545:4: error: expected ';' after expression
rtx v8; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_relational_operation/src/simplify-rtx.c:2545:5: error: use of undeclared identifier 'v8'
rtx v8; // r13 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_relational_operation/src/simplify-rtx.c:2547:4: error: expected ';' after expression
rtx result; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_relational_operation/src/simplify-rtx.c:2547:5: error: use of undeclared identifier 'result'
rtx result; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_relational_operation/src/simplify-rtx.c:2555:4: error: expected ';' after expression
rtx v18; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_relational_operation/src/simplify-rtx.c:2555:5: error: use of undeclared identifier 'v18'
rtx v18; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_relational_operation/src/simplify-rtx.c:2557:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v20; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_relational_operation/src/simplify-rtx.c:2593:6: error: use of undeclared identifier 'v56'
rtx *v56; // rcx 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_relational_operation/src/simplify-rtx.c:2595:6: error: use of undeclared identifier 'v58'
rtx *v58; // rcx 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_relational_operation/src/simplify-rtx.c:2611:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v4 = (  struct rtx_def *)op0[1]; 
                         ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_relational_operation/src/simplify-rtx.c:2614:1: error: use of undeclared identifier 'v8'
v8 = avoid_constant_pool_reference( rtx); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_relational_operation/src/simplify-rtx.c:2616:15: error: must use 'enum' tag to refer to type 'mode_class'
if ( *( const mode_class *)( ( char *)mode_class_0 + ( ( *( _DWORD *)rtx >> 14) & 0x3FC)) == MODE_CC ) 
              ^
              enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_relational_operation/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_relational_operation/src/simplify-rtx.c:2616:39: error: use of undeclared identifier 'mode_class_0'
if ( *( const mode_class *)( ( char *)mode_class_0 + ( ( *( _DWORD *)rtx >> 14) & 0x3FC)) == MODE_CC ) 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_relational_operation/src/simplify-rtx.c:2618:35: error: use of undeclared identifier 'v8'
if ( swap_commutative_operands_p( v8, v9) ) 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_relational_operation/src/simplify-rtx.c:2628:7: error: use of undeclared identifier 'v8'
v12 = v8; 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_relational_operation/src/simplify-rtx.c:2629:1: error: use of undeclared identifier 'v8'
v8 = v9; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_relational_operation/src/obj/simplify-rtx.o] Error 1
